# ps-docs-rag

./: .env.template  .gitignore  README.md  pyproject.toml
crawler/: auth.py  crawl.py
mcp_server/: server.py
output/: site_map.json
output/pages/: ps_manual.json  ps_manual_AFT.html.json  ps_manual_AFT_aft_rejects_recalls_error_corrections_other_exception_items.4.1.html.json  ps_manual_AFT_aft_rejects_recalls_error_corrections_other_exception_items.4.2.html.json  ps_manual_AFT_aft_rejects_recalls_error_corrections_other_exception_items.4.3.html.json  ps_manual_AFT_aft_rejects_recalls_error_corrections_other_exception_items.4.4.html.json  ps_manual_AFT_aft_rejects_recalls_error_corrections_other_exception_items.4.5.html.json  ps_manual_AFT_aft_rejects_recalls_error_corrections_other_exception_items.4.6.html.json  ps_manual_AFT_aft_rejects_recalls_error_corrections_other_exception_items.4.7.html.json  ps_manual_AFT_aft_reports.7.1.html.json  ps_manual_AFT_aft_reports.7.2.html.json  ps_manual_AFT_aft_reports.7.3.html.json  ps_manual_AFT_aft_returns_and_aft_notice_of_change_transactions.5.01.html.json  ps_manual_AFT_aft_returns_and_aft_notice_of_change_transactions.5.02.html.json  ps_manual_AFT_aft_returns_and_aft_notice_of_change_transactions.5.03.html.json  ps_manual_AFT_aft_returns_and_aft_notice_of_change_transactions.5.04.html.json  ps_manual_AFT_aft_returns_and_aft_notice_of_change_transactions.5.05.html.json  ps_manual_AFT_aft_settlement.6.1.html.json  (+707 more)
rag/: embeddings.py  ingest.py  query.py
summarizer/: build_site.py  summarize.py
web_server/: server.py
(+932 files in other folders)
